[gd_scene load_steps=14 format=3 uid="uid://bh0bqya2jla5j"]

[ext_resource type="Script" uid="uid://dy6kysucj6gjc" path="res://world.gd" id="1_jc6b2"]
[ext_resource type="PackedScene" uid="uid://ca0qb0ckmyho4" path="res://entidades/vertice.tscn" id="2_oxl10"]
[ext_resource type="PackedScene" uid="uid://cqqgkgi6it0ng" path="res://entidades/arista.tscn" id="3_0ewb0"]
[ext_resource type="Theme" uid="uid://cqg3er0rb3j23" path="res://main.tres" id="4_vgllc"]
[ext_resource type="Script" uid="uid://u5dovwfqvhxf" path="res://caja_herramientas.gd" id="5_jrslh"]
[ext_resource type="Script" uid="uid://cn4si5v8371jp" path="res://estadisticas.gd" id="6_4etkf"]
[ext_resource type="Script" uid="uid://bpibedoqpgmc8" path="res://ui/inspector.gd" id="6_oxl10"]
[ext_resource type="Script" uid="uid://bski57waoy50a" path="res://numero_cromatico.gd" id="7_wkawa"]
[ext_resource type="Script" uid="uid://cajr0g7lxu1ws" path="res://euler.gd" id="8_iciv1"]
[ext_resource type="Script" uid="uid://b0rjr80e73k6x" path="res://hamilton.gd" id="9_6f8md"]
[ext_resource type="Script" uid="uid://ywdyxqc080mr" path="res://planaridad.gd" id="10_higf7"]
[ext_resource type="Script" uid="uid://d3rgcmcg5xbrs" path="res://camera.gd" id="11_b5es7"]
[ext_resource type="Script" uid="uid://2gidsxomkfja" path="res://ui/general_inspector.gd" id="12_0ewb0"]

[node name="World" type="Node"]
script = ExtResource("1_jc6b2")
escenaVertice = ExtResource("2_oxl10")
escenaArista = ExtResource("3_0ewb0")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Top" type="Panel" parent="UI"]
anchors_preset = -1
anchor_left = 0.396
anchor_top = 0.008
anchor_right = 0.602
anchor_bottom = 0.052
offset_left = -251.0
offset_top = -5.2
offset_right = 241.59998
offset_bottom = 76.2
grow_horizontal = 2
theme = ExtResource("4_vgllc")
script = ExtResource("5_jrslh")

[node name="Herramientas" type="HBoxContainer" parent="UI/Top"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -245.0
offset_top = 14.0
offset_right = 242.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_constants/separation = 20
alignment = 1

[node name="AddArista" type="Button" parent="UI/Top/Herramientas"]
layout_mode = 2
text = "Añadir arista"

[node name="AddVertice" type="Button" parent="UI/Top/Herramientas"]
layout_mode = 2
text = "Añadir vertice"

[node name="QuitarVertice" type="Button" parent="UI/Top/Herramientas"]
layout_mode = 2
text = "Eliminar vertice"

[node name="Cancelar" type="Button" parent="UI/Top"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "cancelar"

[node name="Multigrafo" type="CheckBox" parent="UI/Top"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -42.0
offset_right = 56.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
text = "multigrafo"

[node name="VerificarMargen" type="Timer" parent="UI/Top"]
autostart = true

[node name="Inspector" type="Panel" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -249.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_vgllc")
script = ExtResource("6_oxl10")

[node name="GraphInspection" type="Control" parent="UI/Inspector"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/Inspector/GraphInspection"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 6.0
offset_right = -3.0
offset_bottom = 32.0
grow_horizontal = 2
text = "Sobre este grafo"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="UI/Inspector/GraphInspection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 33.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 5

[node name="Estadisticas" type="Control" parent="UI/Inspector/GraphInspection/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("6_4etkf")
metadata/_tab_index = 0

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Inspector/GraphInspection/TabContainer/Estadisticas"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 6.0
offset_right = -9.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="NumeroCromatico" type="Control" parent="UI/Inspector/GraphInspection/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("7_wkawa")
metadata/_tab_index = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Inspector/GraphInspection/TabContainer/NumeroCromatico"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 5.0
offset_right = -11.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="Euler" type="Control" parent="UI/Inspector/GraphInspection/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("8_iciv1")
metadata/_tab_index = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Inspector/GraphInspection/TabContainer/Euler"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 4.0
offset_right = -6.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="Hamilton" type="Control" parent="UI/Inspector/GraphInspection/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("9_6f8md")
metadata/_tab_index = 3

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Inspector/GraphInspection/TabContainer/Hamilton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="Planaridad" type="Control" parent="UI/Inspector/GraphInspection/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("10_higf7")
metadata/_tab_index = 4

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Inspector/GraphInspection/TabContainer/Planaridad"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="Acerca de" type="Control" parent="UI/Inspector/GraphInspection/TabContainer"]
layout_mode = 2
metadata/_tab_index = 5

[node name="Menu" type="Button" parent="UI/Inspector/GraphInspection/TabContainer/Acerca de"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -225.0
offset_top = -64.0
offset_right = -15.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "volver al menú"

[node name="GeneralInspector" type="Control" parent="UI/Inspector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_0ewb0")

[node name="Back" type="Button" parent="UI/Inspector/GeneralInspector"]
layout_mode = 0
offset_left = 18.0
offset_top = 13.0
offset_right = 62.0
offset_bottom = 43.0
text = "back"

[node name="FlowContainer" type="FlowContainer" parent="UI/Inspector/GeneralInspector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 57.0
offset_right = -7.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("11_b5es7")
velocidad_zoom = 0.85

[connection signal="estado_cambiado" from="." to="UI/Top" method="_on_world_estado_cambiado"]
[connection signal="pressed" from="UI/Top/Herramientas/AddArista" to="." method="_on_add_arista_pressed"]
[connection signal="pressed" from="UI/Top/Herramientas/AddVertice" to="." method="_on_add_vertice_pressed"]
[connection signal="pressed" from="UI/Top/Herramientas/QuitarVertice" to="." method="_on_quitar_vertice_pressed"]
[connection signal="pressed" from="UI/Top/Cancelar" to="." method="_on_cancelar_pressed"]
[connection signal="toggled" from="UI/Top/Multigrafo" to="." method="_on_multigrafo_toggled"]
[connection signal="timeout" from="UI/Top/VerificarMargen" to="UI/Top" method="_on_verificar_margen_timeout"]
[connection signal="pressed" from="UI/Inspector/GraphInspection/TabContainer/Acerca de/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="UI/Inspector/GeneralInspector/Back" to="UI/Inspector/GeneralInspector" method="_on_back_pressed"]
